[package]
name = "chigusa"
version = "0.1.0"
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"

[lib]
name = "chigusa"
path = "src/lib.rs"

# [[bin]]
# name = "chigusa_bin"
# path = "src/bin.rs"

[dependencies]
itertools = "0.8.1"
# lazy_static = "1.4.0"
indexmap = "1.3"
either = "1.5.3"
bimap = "0.4.0"
ramp = "0.5"
regex = "1.3"
failure = "0.1.6"
once_cell = "1.2"   
# treelike = "0.2.0"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0", optional = true }
# wasmtime = {version = "0.3", optional = true}
# parity-wasm = {version = "0.40", optional = true}
cranelift = "0.51"
cute-log = "1.3"
log = "0.4.8"
clap = "2.33"
structopt = "0.3"


[features]
# llvm_jit = ["inkwell"]
# llvm = ["inkwell"]
# kurumi = []
# wasm = ["wasmtime", "parity-wasm"]
default = []

